Downloads/Build_Automation/Build_Automation/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo-app-service
  labels:
    app: cicd-demo-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: cicd-demo-app
