Downloads/Build_Automation/Build_Automation/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-demo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cicd-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cicd-demo-app-service
            port:
              number: 80
